--- a/views/partials/admin/admin-navbar.ejs
+++ b/views/partials/admin/admin-navbar.ejs
@@ -31,7 +31,7 @@
           <a class="nav-link active nav-item" aria-current="page" href="#">Satistics</a>
         </li>
         <li class="nav-item ps-4">
-          <a class="nav-link active nav-item" aria-current="page" href="#">Coupons</a>
+          <a class="nav-link active nav-item" aria-current="page" href="/admin/coupons">Coupons</a>
         </li>
         <li class="nav-item ps-4">
           <a class="nav-link active nav-item" aria-current="page" href="/admin/banner">Banners</a>
