--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -33,12 +33,22 @@
             </div>
           </div>
           <div class="col-lg-3">
-            <div>
-              <p><strong>Order Status: </strong><%= order.orderStatus %> </p>
-            </div>
-            <div>
-              <p>Payment Status: <%= order.paymentMethod == 'COD'? order.paymentMethod : (order.PaymentVerified? 'Completed' : 'Pending') %>  </p>
-            </div>
+            <% if(item.isCancelled){ %>
+              <div>
+                <p class="text-danger"><strong>Order Status: </strong>Cancelled</p>
+              </div>
+            <% }else if(item.orderStatus == 'Delivered'){ %> 
+              <div>
+                <p class="text-success"><strong>Order Status: </strong>Delivered</p>
+              </div>
+            <% }else{ %>
+              <div>
+                <p><strong>Order Status: </strong><%= item.orderStatus %> </p>
+              </div>
+              <div>
+                <p>Payment Status: <%= order.paymentMethod == 'COD'? order.paymentMethod : (order.PaymentVerified? 'Completed' : 'Pending') %>  </p>
+              </div>
+            <% } %>   
           </div>
         </div>
       </a>
