--- a/views/partials/admin/admin-navbar.ejs
+++ b/views/partials/admin/admin-navbar.ejs
@@ -19,7 +19,7 @@
           <a class="nav-link active nav-item" aria-current="page" href="/admin/categories">Categories</a>
         </li>
         <li class="nav-item ps-4">
-          <a class="nav-link active nav-item" aria-current="page" href="/admin">Products</a>
+          <a class="nav-link active nav-item" aria-current="page" href="/admin/products">Products</a>
         </li>
         <li class="nav-item ps-4">
           <a class="nav-link nav-item" href="/admin/users">Users</a>
