Changed payment gateway from stripe to razorpay

--- a/views/partials/admin/admin-navbar.ejs
+++ b/views/partials/admin/admin-navbar.ejs
@@ -16,6 +16,9 @@
       </form> -->
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item ps-4">
+          <a class="nav-link active nav-item" aria-current="page" href="/admin">Dashboard</a>
+        </li>
+        <li class="nav-item ps-4">
           <a class="nav-link active nav-item" aria-current="page" href="/admin/categories">Categories</a>
         </li>
         <li class="nav-item ps-4">
@@ -26,9 +29,6 @@
         </li>
         <li class="nav-item ps-4">
           <a class="nav-link active nav-item" aria-current="page" href="/admin/orders">Orders</a>
-        </li>
-        <li class="nav-item ps-4">
-          <a class="nav-link active nav-item" aria-current="page" href="#">Satistics</a>
         </li>
         <li class="nav-item ps-4">
           <a class="nav-link active nav-item" aria-current="page" href="/admin/coupons">Coupons</a>
