--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -114,7 +114,7 @@
           <hr>
           <p class="fw-bold">Choose Payment Method</p>
           <div class="d-flex flex-sm-row flex-column justify-content-between mt-3">
-            <button type="button" id="pay" onclick="checkPayment(this.id)" class="main-button">Pay Via Stripe</button>
+            <button type="button" id="pay" onclick="checkPayment(this.id)" class="main-button">Pay Via Razorpay</button>
             <button type="submit" formaction="/checkout/cod" class="main-button mt-sm-0 mt-3">Cash On Delivery</button>
           </div>
         </div>
@@ -123,6 +123,7 @@
   </div>
 </section>
 <%- include('../partials/footer') %> 
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script src="/script/userScript.js"></script>
 <script src="/script/payment.js"></script>
 </body>
