--- a/views/admin/admin-dashboard.ejs
+++ b/views/admin/admin-dashboard.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ defer<!DOCTYPE html>
 <html lang="en">
 <%- include('../partials/admin/admin-head-datatable') %> 
 <body class="mt-5">
@@ -49,8 +49,8 @@
       </div>
     </div>
   </section>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <%- include('../partials/admin/datatable-footer') %> 
-  <script src="/script/navbarScroll.js"></script> 
+  <script defer src="/script/navbarScroll.js"></script> 
 </body>
 </html>
