--- a/views/admin/product-details.ejs
+++ b/views/admin/product-details.ejs
@@ -81,10 +81,10 @@
         </div>
       </div>
   </section>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <%- include('../partials/admin/datatable-footer') %> 
-  <script src="/script/navbarScroll.js"></script> 
-  <script src="/script/updateAndDelete.js"></script>
-  <script src="/script/updateAndDeleteSku.js"></script>
+  <script defer src="/script/navbarScroll.js"></script> 
+  <script defer src="/script/updateAndDelete.js"></script>
+  <script defer src="/script/updateAndDeleteSku.js"></script>
 </body>
 </html>
