--- a/views/admin/product-skus-edit.ejs
+++ b/views/admin/product-skus-edit.ejs
@@ -59,9 +59,9 @@
       </div>
     </form>
   </section>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  <script src="/script/navbarScroll.js"></script> 
-  <script src="/script/updateAndDeleteSku.js"></script>
-  <script src="/script/changeImage.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  <script defer src="/script/navbarScroll.js"></script> 
+  <script defer src="/script/updateAndDeleteSku.js"></script>
+  <script defer src="/script/changeImage.js"></script>
 </body>
 </html>
