--- a/views/partials/admin/datatable-footer.ejs
+++ b/views/partials/admin/datatable-footer.ejs
@@ -1,4 +1,4 @@
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.13.1/js/dataTables.bootstrap5.min.js"></script>
-<script src="/script/datatable.js"></script>
+<script defer src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script defer src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+<script defer src="https://cdn.datatables.net/1.13.1/js/dataTables.bootstrap5.min.js"></script>
+<script defer src="/script/datatable.js"></script>
