--- a/views/partials/user-navbar.ejs
+++ b/views/partials/user-navbar.ejs
@@ -10,8 +10,8 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <form class="d-flex mx-auto" role="search">
-        <input class="form-control form-search" type="search" placeholder="Search" aria-label="Search">
+      <form class="d-flex mx-auto" role="search" method="GET" action="/search">
+        <input class="form-control form-search" type="search" name="search" placeholder="Search" aria-label="Search">
         <button class="search-button" type="submit"><img class="search-icon" src="/assets/icons/search.png" alt=""></button>
       </form>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -22,12 +22,32 @@
           <a class="nav-link nav-item d-flex align-items-center" href="/cart"><img class="navbar-icon" src="/assets/icons/cart.png" alt=""> <span>Cart</span></a>
         </li>
         <li class="nav-item ps-4">
-          <a class="nav-link active nav-item d-flex align-items-center" aria-current="page" href="/dashboard"><img class="navbar-icon" src="/assets/icons/user.png" alt=""> <span>Hi user</span></a>
+          <a class="nav-link active nav-item d-flex align-items-center" aria-current="page" href="/dashboard"><img class="navbar-icon" src="/assets/icons/user.png" alt=""> <span>Hi <%= user %></span></a>
         </li>
-        <li class="nav-item ps-4">
-          <a class="nav-link nav-item d-flex align-items-center" href="/logout"><img class="navbar-icon" src="/assets/icons/logout.png" alt=""> <span>Logout</span></a>
+        <li class="nav-item ps-4 d-flex align-items-center">
+          <button type="button" class="logout-button" data-bs-toggle="modal" data-bs-target="#modal">
+            <img class="navbar-icon" src="/assets/icons/logout.png" alt="">
+            Logout
+          </button>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+<div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="modalLabel">Logout</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to logout?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="main-button" data-bs-dismiss="modal">Cancel</button>
+        <a href="/logout" class="sub-button text-decoration-none">Logout</a>
+      </div>
+    </div>
+  </div>
+</div>
