--- a/views/users/edit-address.ejs
+++ b/views/users/edit-address.ejs
@@ -37,6 +37,6 @@
   </div>
 </section>
 <%- include('../partials/footer') %> 
-<script src="/script/userScript.js"></script>
+<script defer src="/script/userScript.js"></script>
 </body>
 </html>
