--- a/views/users/order-details.ejs
+++ b/views/users/order-details.ejs
@@ -81,6 +81,6 @@
   </div>
 </section>
 <%- include('../partials/footer') %> 
-<script src="/script/userScript.js"></script>
+<script defer src="/script/userScript.js"></script>
 </body>
 </html>
