--- a/views/users/payment-successful.ejs
+++ b/views/users/payment-successful.ejs
@@ -13,6 +13,6 @@
   </div>
 </section>
 <%- include('../partials/footer') %> 
-<script src="/script/userScript.js"></script>
+<script defer src="/script/userScript.js"></script>
 </body>
 </html>
