--- a/views/users/product-details.ejs
+++ b/views/users/product-details.ejs
@@ -2,7 +2,11 @@
 <html lang="en">
 <%- include('../partials/head') %> 
 <body class="pt-5">
+<% if(user){ %> 
 <%- include('../partials/user-navbar') %> 
+<% }else{ %>
+<%- include('../partials/guest-navbar') %>
+<% } %>  
 <section class="container">
   <div class="row">
     <div class="col-md-6 position-relative">
@@ -33,7 +37,7 @@
       <% if(sku.totalStock>0){ %> 
       <div class="d-flex my-sm-5 my-1 justify-content-center">
         <div class="col-3 d-flex justify-content-center align-items-center">
-          <button class="main-button w-100">Buy Now</button>
+          <button onclick="buynow('<%= sku._id %>', '<%= product._id %>')" class="main-button w-100">Buy Now</button>
         </div>
         <div class="col-4 d-flex justify-content-center ps-sm-5 ps-1">
           <button class="sub-button w-100" onclick="addToCart(this.id)" id="add-to-cart-button" data-prodid="<%= product._id %>" data-skuid="<%= sku._id %> ">Add to cart</button>
@@ -99,6 +103,6 @@
   </div>
 </section>
 <%- include('../partials/footer') %> 
-<script src="/script/userScript.js"></script>
+<script defer src="/script/userScript.js"></script>
 </body>
 </html>
