--- a/views/users/wishlist.ejs
+++ b/views/users/wishlist.ejs
@@ -39,6 +39,6 @@
   </div>
 </section>
 <%- include('../partials/footer') %> 
-<script src="/script/userScript.js"></script>
+<script defer src="/script/userScript.js"></script>
 </body>
 </html>
